Add deduplicateScenarioBuilder, tests, doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(createPSP)
 export(createStudy)
 export(createStudyAPI)
 export(createVariant)
+export(deduplicateScenarioBuilder)
 export(deleteStudy)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
