Add writeIniHydro() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ export(writeHydroValues)
 export(writeIni)
 export(writeIniAPI)
 export(writeIniFile)
+export(writeIniHydro)
 export(writeInputTS)
 export(writeMiscGen)
 export(writeOutputValues)
