Add functions to control consistency between mingen data and mod data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ importFrom(antaresRead,readClusterDesc)
 importFrom(antaresRead,readIni)
 importFrom(antaresRead,readIniAPI)
 importFrom(antaresRead,readIniFile)
+importFrom(antaresRead,readInputTS)
 importFrom(antaresRead,readLayout)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,setSimulationPathAPI)
