--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(getPlaylist)
 export(getVariantCommands)
 export(is_antares_v7)
 export(is_antares_v820)
+export(list_polluants_values)
 export(mockSimulationAPI)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
