storage_values_default new function for list of default parameter used in creation/edition

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(searchStudy)
 export(setAPImode)
 export(setPlaylist)
 export(setSolverPath)
+export(storage_values_default)
 export(updateAdequacySettings)
 export(updateGeneralSettings)
 export(updateInputSettings)
