Ant785/control mingen data (#102)
* Add writeIniHydro() function

* Call writeIniHydro() function in createArea() and remove Area()

* Use get_default_hydro_ini_values() to get the default values

* Add functions to control consistency between mingen data and mod data (v860)

* Add functions to control consistency between mingen data and maxpower data (v860)

* Add control of consistency between reservoir section and reservoir capacity section in hydro.ini file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ export(writeHydroValues)
 export(writeIni)
 export(writeIniAPI)
 export(writeIniFile)
+export(writeIniHydro)
 export(writeInputTS)
 export(writeMiscGen)
 export(writeOutputValues)
@@ -104,6 +105,7 @@ importFrom(antaresRead,readClusterDesc)
 importFrom(antaresRead,readIni)
 importFrom(antaresRead,readIniAPI)
 importFrom(antaresRead,readIniFile)
+importFrom(antaresRead,readInputTS)
 importFrom(antaresRead,readLayout)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,setSimulationPathAPI)
