Api/st storage (#96)
* maj tests v860 with new templates study v860

* createClusterST block API + tests

* editClusterST API work in progress

* createCluster fix polluants parameter to list (new function added to create list of polluants) + fix default value for API

* st-storage add new function (internal) to standardize name of cluster for API

* createClusterST fix api call parameter

* removeCluster() fix for st-storage

* createClusterST reworking function with new parameters + tests + doc

* editClusterST reworking with new parameter + tests + doc

* storage_values_default new function for list of default parameter used in creation/edition

* createClusterST fix create data files + tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(getPlaylist)
 export(getVariantCommands)
 export(is_antares_v7)
 export(is_antares_v820)
+export(list_polluants_values)
 export(mockSimulationAPI)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
@@ -70,6 +71,7 @@ export(searchStudy)
 export(setAPImode)
 export(setPlaylist)
 export(setSolverPath)
+export(storage_values_default)
 export(updateAdequacySettings)
 export(updateGeneralSettings)
 export(updateInputSettings)
