fix pollutants part names function and doc + maj site doc of package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,7 +51,7 @@ export(getPlaylist)
 export(getVariantCommands)
 export(is_antares_v7)
 export(is_antares_v820)
-export(list_polluants_values)
+export(list_pollutants_values)
 export(mockSimulationAPI)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
