setThematicTrimming update with suppression part + tests + doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(searchStudy)
 export(setAPImode)
 export(setPlaylist)
 export(setSolverPath)
+export(setThematicTrimming)
 export(storage_values_default)
 export(updateAdequacySettings)
 export(updateGeneralSettings)
