Add removeOutput() to delete a simulation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(removeCluster)
 export(removeClusterRES)
 export(removeClusterST)
 export(removeLink)
+export(removeOutput)
 export(runSimulation)
 export(runTsGenerator)
 export(scenarioBuilder)
