--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,12 +15,14 @@ Authors@R: c(
     person("Assil", "Mansouri", role = "ctb"),
     person("Abdallah", "Mahoudi", role = "ctb"),
     person("Clement", "Berthet", role = "ctb"),
+    person("Kamel", "Kemiha", role = "ctb"),
+    person("Nicolas", "Boitard", role = "ctb"),
     person("RTE", role = "cph"))
 Description: Edit an 'Antares' simulation before running it : create new areas, links, thermal
     clusters or binding constraints or edit existing ones. Update 'Antares' general & optimization settings.
     'Antares' is an open source power system generator, more information available here : <https://antares-simulator.org/>.
 License: GPL (>= 2) | file LICENSE
-URL: https://github.com/rte-antares-rpackage/antaresEditObject
+URL: https://github.com/rte-antares-rpackage/antaresEditObject, https://rte-antares-rpackage.github.io/antaresEditObject/
 BugReports: https://github.com/rte-antares-rpackage/antaresEditObject/issues
 Encoding: UTF-8
 RoxygenNote: 7.2.2
