--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,6 +143,7 @@ importFrom(httr,status_code)
 importFrom(httr,stop_for_status)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
+importFrom(lifecycle,deprecated)
 importFrom(memuse,Sys.meminfo)
 importFrom(plyr,ldply)
 importFrom(plyr,llply)
