update github check workflow

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -46,7 +46,7 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           args: 'c("--no-manual", "--as-cran")'
-          error-on: 'c("error", "warning", "note")'
+          error-on: '"note"'
 
       - name: Show testthat output
         if: always()
