Add importStudy() to upload a local study in Antares Web

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(getJobLogs)
 export(getJobs)
 export(getPlaylist)
 export(getVariantCommands)
+export(importStudy)
 export(is_antares_v7)
 export(is_antares_v820)
 export(list_pollutants_values)
@@ -140,6 +141,7 @@ importFrom(httr,content)
 importFrom(httr,content_type_json)
 importFrom(httr,status_code)
 importFrom(httr,stop_for_status)
+importFrom(httr,upload_file)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
 importFrom(memuse,Sys.meminfo)
