change importStudy by importZipStudyWeb, the function is in importStudyAPI instead of createStudy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,7 +49,7 @@ export(getJobLogs)
 export(getJobs)
 export(getPlaylist)
 export(getVariantCommands)
-export(importStudy)
+export(importZipStudyWeb)
 export(is_antares_v7)
 export(is_antares_v820)
 export(list_pollutants_values)
