scenarioBuilder(), readScenarioBuilder() updated to be able with bc scenarized + doc + tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(createPSP)
 export(createStudy)
 export(createStudyAPI)
 export(createVariant)
+export(create_referential_series_type)
 export(deduplicateScenarioBuilder)
 export(deleteStudy)
 export(dicoGeneralSettings)
