Update NAMESPACE after importing readClusterSTDesc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ importFrom(antaresRead,getAreas)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
 importFrom(antaresRead,readClusterDesc)
+importFrom(antaresRead,readClusterSTDesc)
 importFrom(antaresRead,readIni)
 importFrom(antaresRead,readIniAPI)
 importFrom(antaresRead,readIniFile)
