--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,8 @@ importFrom(httr,stop_for_status)
 importFrom(httr,upload_file)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
+importFrom(lifecycle,deprecate_warn)
+importFrom(lifecycle,is_present)
 importFrom(memuse,Sys.meminfo)
 importFrom(plyr,ldply)
 importFrom(plyr,llply)
