import deprecated() from lifecycle

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,6 +146,7 @@ importFrom(httr,upload_file)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
 importFrom(lifecycle,deprecate_warn)
+importFrom(lifecycle,deprecated)
 importFrom(lifecycle,is_present)
 importFrom(memuse,Sys.meminfo)
 importFrom(plyr,ldply)
