github actions remote branch on develop

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,5 +54,5 @@ Suggests:
     rmarkdown
 VignetteBuilder: knitr
 Remotes: 
-    rte-antares-rpackage/antaresRead@release/v8.7.0
+    rte-antares-rpackage/antaresRead@develop
 
