add private function group_values_meta_check() to check dim with meta data in opts + tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,5 +54,5 @@ Suggests:
     rmarkdown
 VignetteBuilder: knitr
 Remotes: 
-    rte-antares-rpackage/antaresRead@develop
+    rte-antares-rpackage/antaresRead@ant1777/dimbcgroup
 
