update createbinding + bulk + doc + test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,7 +50,7 @@ export(getJobLogs)
 export(getJobs)
 export(getPlaylist)
 export(getVariantCommands)
-export(group_values_check)
+export(group_values_meta_check)
 export(importZipStudyWeb)
 export(is_antares_v7)
 export(is_antares_v820)
