Clean the list by dropNulls before trying to write data, build the function updateOutputSettings() on the same model as updateInputSettings() with dicoOutputSettings()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(deduplicateScenarioBuilder)
 export(deleteStudy)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
+export(dicoOutputSettings)
 export(editArea)
 export(editBindingConstraint)
 export(editCluster)
