--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(deduplicateScenarioBuilder)
 export(deleteStudy)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
+export(dicoOutputSettings)
 export(editArea)
 export(editBindingConstraint)
 export(editCluster)
@@ -50,7 +51,7 @@ export(getJobLogs)
 export(getJobs)
 export(getPlaylist)
 export(getVariantCommands)
-export(group_values_check)
+export(group_values_meta_check)
 export(importZipStudyWeb)
 export(is_antares_v7)
 export(is_antares_v820)
@@ -58,9 +59,6 @@ export(list_pollutants_values)
 export(mockSimulationAPI)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
-export(readIni)
-export(readIniAPI)
-export(readIniFile)
 export(readScenarioBuilder)
 export(removeArea)
 export(removeBindingConstraint)
@@ -110,7 +108,6 @@ importFrom(antaresRead,readBindingConstraints)
 importFrom(antaresRead,readClusterDesc)
 importFrom(antaresRead,readClusterSTDesc)
 importFrom(antaresRead,readIni)
-importFrom(antaresRead,readIniAPI)
 importFrom(antaresRead,readIniFile)
 importFrom(antaresRead,readInputTS)
 importFrom(antaresRead,readLayout)
@@ -147,7 +144,9 @@ importFrom(httr,stop_for_status)
 importFrom(httr,upload_file)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
+importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
+importFrom(lifecycle,is_present)
 importFrom(memuse,Sys.meminfo)
 importFrom(plyr,ldply)
 importFrom(plyr,llply)
