--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,antares.api.logs)
 export(activateRES)
 export(activateST)
 export(adequacyOptions)
+export(api_patch)
 export(backupStudy)
 export(checkRemovedArea)
 export(cleanUpOutput)
@@ -134,6 +135,7 @@ importFrom(data.table,year)
 importFrom(doFuture,registerDoFuture)
 importFrom(future,plan)
 importFrom(grDevices,col2rgb)
+importFrom(httr,PATCH)
 importFrom(httr,POST)
 importFrom(httr,accept_json)
 importFrom(httr,add_headers)
@@ -153,6 +155,7 @@ importFrom(plyr,llply)
 importFrom(stats,as.formula)
 importFrom(stats,sd)
 importFrom(stats,setNames)
+importFrom(utils,URLencode)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,modifyList)
