Add dicoAdequacySettings() function, clean list of values to send by removing NULL

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(createVariant)
 export(create_scb_referential_series_type)
 export(deduplicateScenarioBuilder)
 export(deleteStudy)
+export(dicoAdequacySettings)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
 export(dicoOutputSettings)
