--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -45,4 +45,4 @@ jobs:
         with:
           clean: false
           branch: gh-pages
-          folder: docs
+          folder: docs/release920
