--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -36,7 +36,7 @@ jobs:
           needs: website
 
       - name: Build site
-        run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
+        run: pkgdown::build_site_github_pages()
         shell: Rscript {0}
 
       - name: Deploy to GitHub pages 🚀
@@ -45,4 +45,4 @@ jobs:
         with:
           clean: false
           branch: gh-pages
-          folder: docs/release920
+          folder: docs
