workflow pkgdown add concurrency + folder docs

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -15,8 +15,8 @@ jobs:
   pkgdown:
     runs-on: ubuntu-latest
     # Only restrict concurrency for non-PR jobs
-    # concurrency:
-      # group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
+    concurrency:
+      group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     permissions:
@@ -45,4 +45,4 @@ jobs:
         with:
           clean: false
           branch: gh-pages
-          folder: docs/release920
+          folder: docs
