--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -36,7 +36,7 @@ jobs:
           needs: website
 
       - name: Build site
-        run: pkgdown::build_site_github_pages()
+        run: pkgdown::build_site_github_pages(dest_dir = "docs/release920")
         shell: Rscript {0}
 
       - name: Deploy to GitHub pages 🚀
