--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -5,7 +5,7 @@
 on:
   push:
     branches: [release/9.2]
-  pull_request: [release/9.2]
+  pull_request: [master, release/9.2]
   
   release:
     types: [published]
