--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -6,7 +6,7 @@ on:
   push:
     branches: [release/9.2]
   pull_request: 
-    branches: [master]
+    branches: [release/9.2]
   
   release:
     types: [published]
