update pkgdown site with bootstrap 5 + fix some warnings about vignette

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,6 +2,6 @@ development:
   mode: auto
 destination: docs/release920
 template:
-  params:
-    bootswatch: readable
+  bootstrap: 5
+  light-switch: true
 
