--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,12 +1,11 @@
 # Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 
-# /!\/!\/!\ only release workflow
 on:
   push:
-    branches: [release/9.2]
+    branches: [main, master]
   pull_request: 
-    branches: [release/9.2]
+    branches: [main, master]
   
   release:
     types: [published]
@@ -39,7 +38,7 @@ jobs:
           needs: website
 
       - name: Build site
-        run: pkgdown::build_site_github_pages(dest_dir = "docs/release920")
+        run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
 
       - name: Deploy to GitHub pages 🚀
