--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,6 +2,6 @@ development:
   mode: auto
 destination: docs
 template:
-  params:
-    bootswatch: readable
+  bootstrap: 5
+  light-switch: true
 
