New feature `setThematicTrimming()` (#111)
* reforge setThematicTrimming() file stystem part
now return opts updated, no need to use setsimulationPath() to just update opts
+
reforge all test with mock study

* setThematicTrimming() compatible API + add new test

* setThematicTrimming() optimized in API mode to write onlys efficient section og generaldata and now return and updated opts without re read all study

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(searchStudy)
 export(setAPImode)
 export(setPlaylist)
 export(setSolverPath)
+export(setThematicTrimming)
 export(storage_values_default)
 export(updateAdequacySettings)
 export(updateGeneralSettings)
