Rename file createDistrict.R to district.R and same thing for test file. Add function removeDistrict()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(removeBindingConstraint)
 export(removeCluster)
 export(removeClusterRES)
 export(removeClusterST)
+export(removeDistrict)
 export(removeLink)
 export(runSimulation)
 export(runTsGenerator)
@@ -105,6 +106,7 @@ importFrom(antaresRead,api_get)
 importFrom(antaresRead,api_post)
 importFrom(antaresRead,api_put)
 importFrom(antaresRead,getAreas)
+importFrom(antaresRead,getDistricts)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
 importFrom(antaresRead,readClusterDesc)
@@ -116,6 +118,7 @@ importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,setSimulationPathAPI)
 importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
+importFrom(cli,cli_alert_success)
 importFrom(data.table,":=")
 importFrom(data.table,.SD)
 importFrom(data.table,CJ)
