--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,7 +51,8 @@ Suggests:
     testthat,
     covr,
     knitr,
-    rmarkdown
+    rmarkdown,
+    listviewer
 VignetteBuilder: knitr
 Remotes:  
     rte-antares-rpackage/antaresRead
