--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ importFrom(antaresRead,getDistricts)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
 importFrom(antaresRead,readClusterDesc)
+importFrom(antaresRead,readClusterSTDesc)
 importFrom(antaresRead,readIni)
 importFrom(antaresRead,readIniFile)
 importFrom(antaresRead,readInputTS)
