editDsitrict() in API mode

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(editCluster)
 export(editClusterRES)
 export(editClusterST)
 export(editDSR)
+export(editDistrict)
 export(editLink)
 export(editPSP)
 export(filteringOptions)
