Add unbox to @importFrom section

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,6 +150,7 @@ importFrom(httr,status_code)
 importFrom(httr,stop_for_status)
 importFrom(httr,upload_file)
 importFrom(jsonlite,toJSON)
+importFrom(jsonlite,unbox)
 importFrom(jsonlite,write_json)
 importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
