District creation and edition (#246)
* Find exact match with grep to remove a district

* Use the specific endpoint to create a district

* Add unit tests for createDistrict()

* .Rd files after package check

* editDsitrict() in API mode

* Canhe control to avoid tthe use of add_area and remove_area at the same time

* Add to list new_district only existing object remove_area or add_area

* Enrich unit tests to check the district more precisely

* Edit a district in disk mode

* Add unit tests for editDistrict()

* Update NEWS.md

* Treat single area case

* Add unbox to @importFrom section

* Update NEWS.md in right section after pulling from master

* Update NEWS.md

---------

Co-authored-by: kemihak <kamel.kemiha@rte-france.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(editCluster)
 export(editClusterRES)
 export(editClusterST)
 export(editDSR)
+export(editDistrict)
 export(editLink)
 export(editPSP)
 export(filteringOptions)
@@ -149,6 +150,7 @@ importFrom(httr,status_code)
 importFrom(httr,stop_for_status)
 importFrom(httr,upload_file)
 importFrom(jsonlite,toJSON)
+importFrom(jsonlite,unbox)
 importFrom(jsonlite,write_json)
 importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
